created a JSON array of items and created a list of python objects from this. The front end loops through the python list, displaying the name and cost of each item in the list

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,14 +18,9 @@
 <main class="m-auto pt-5">
     <div class="row">
         <div class="col-8 d-flex flex-row-reverse flex-wrap justify-content-around">
-            {% include 'partials/item.html' %}
-            {% include 'partials/item.html' %}
-            {% include 'partials/item.html' %}
-            {% include 'partials/item.html' %}
-            {% include 'partials/item.html' %}
-            {% include 'partials/item.html' %}
-            {% include 'partials/item.html' %}
-            {% include 'partials/item.html' %}
+            {% for item in items %}
+                {% include 'partials/item.html' %}
+            {% endfor %}
         </div>
         <div class="col-4">
             {% include 'partials/basket.html' %}
