--- a/templates/partials/item.html
+++ b/templates/partials/item.html
@@ -1,1 +1,1 @@
-<div class="tile p-1 m-1">this is an item</div>
+<div class="tile p-1 m-1">{{ item.attributes.name }} {{ item.attributes.cost }}</div>
