--- a/templates/index.html
+++ b/templates/index.html
@@ -16,8 +16,9 @@
     {% include 'partials/header.html' %}
 </header>
 <main class="m-auto pt-5">
-    <div class="row">
-        <div class="col-8 d-flex flex-row-reverse flex-wrap justify-content-around">
+    {{ item }}
+    <div class="row m-auto">
+        <div class="col-8 d-flex flex-row flex-wrap">
             {% for item in items %}
                 {% include 'partials/item.html' %}
             {% endfor %}
