there is a functonal delete button

--- a/templates/partials/basket.html
+++ b/templates/partials/basket.html
@@ -2,9 +2,6 @@
     {{ message }}
     <br/>
     {% for item in basket %}
-        <br/>
-        <div>{{ item.attributes.name }}</div>
-        <div>{{ item.attributes.cost }}</div>
-        <br/>
+        {% include 'partials/basket_item.html' %}
     {% endfor %}
 </div>
