changed the word delete for a bin, not possible to change it to red easily so this will be removed from the requirements

--- a/templates/partials/basket_item.html
+++ b/templates/partials/basket_item.html
@@ -4,5 +4,5 @@
     <div>{{ item[1].attributes.cost }}</div>
     <br/>
     <input type="hidden" name="index" value="{{ item[0] }}"/>
-    <input type="submit" value="delete" />
+    <input type="submit" value="&#128465;" />
 </form>
