--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -5,6 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-
+<div>Icons made by <a href="https://www.flaticon.com/authors/dinosoftlabs" title="DinosoftLabs">DinosoftLabs</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
 </body>
 </html>
