--- a/templates/partials/item.html
+++ b/templates/partials/item.html
@@ -2,6 +2,6 @@
     <div>{{ item.attributes.name }}</div>
     <div>{{ item.attributes.cost }}</div>
     <input type="hidden" name="id" value="{{ item.id }}"/>
-    <input type="submit" value="Add to basket"></input>
+    <input type="submit" value="Add to basket" />
 </form>
 
