all functonal requirements of ticket complete

--- a/templates/partials/basket.html
+++ b/templates/partials/basket.html
@@ -5,3 +5,11 @@
         {% include 'partials/basket_item.html' %}
     {% endfor %}
 </div>
+
+<style>
+    .basket {
+    width: 95%;
+    height: 95%;
+    background-color: #cccccc;
+}
+</style>
