--- a/templates/partials/item.html
+++ b/templates/partials/item.html
@@ -5,3 +5,10 @@
     <input type="submit" value="Add to basket" />
 </form>
 
+<style>
+    .tile {
+    width: 200px;
+    height: 200px;
+    background-color: #cccccc;
+}
+</style>
