--- a/templates/partials/basket.html
+++ b/templates/partials/basket.html
@@ -7,6 +7,7 @@
     {% if basket|length > 0 %}
         {% include 'partials/total_cost.html' %}
         {% include 'partials/clear_basket.html' %}
+        {% include 'partials/checkout.html' %}
     {% endif %}
 </div>
 
