code meets all functional requirements of ticket

--- a/templates/partials/basket.html
+++ b/templates/partials/basket.html
@@ -6,6 +6,7 @@
     {% endfor %}
     {% if basket|length > 0 %}
         {% include 'partials/total_cost.html' %}
+        {% include 'partials/discount_codes.html' %}
         {% include 'partials/clear_basket.html' %}
         {% include 'partials/checkout.html' %}
     {% endif %}
